@@ -18,7 +18,7 @@
 package me.zodac.folding.bean.tc.validation;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 import me.zodac.folding.api.exception.ConflictException;
 import me.zodac.folding.api.exception.UsedByException;
@@ -146,7 +146,7 @@ public class HardwareValidator {
 
     private Collection<User> getUsersWithHardware(final int hardwareId) {
         if (hardwareId == Hardware.EMPTY_HARDWARE_ID) {
-            return Collections.emptyList();
+            return List.of();
         }
 
         return foldingRepository.getAllUsersWithoutPasskeys()
